# hackathon-champ

./: README.md  docker-compose.yaml  nginx-server.conf  regions.json
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.docker.yaml  settings.example.yaml  settings.schema.yaml
backend/dump/db/: EmailFlow.bson  EmailFlow.metadata.json  Event.bson  Event.metadata.json  Federation.bson  Federation.metadata.json  Feedback.bson  Feedback.metadata.json  Notify.bson  Notify.metadata.json  Participant.bson  Participant.metadata.json  Results.bson  Results.metadata.json  Selection.bson  Selection.metadata.json  User.bson  User.metadata.json
backend/parse_regions/: parser.py
backend/parser/: parse_regions.py  parser.py  regions.json
backend/src/: config_schema.py  prepare.py
backend/src/api/: app.py  dependencies.py  lifespan.py
backend/src/modules/: ics_utils.py
backend/src/modules/ai/: repository.py
backend/src/modules/email/: email_repository.py  routes.py  smtp_repository.py
backend/src/modules/events/: repository.py  routes.py  schemas.py
backend/src/modules/federation/: repository.py  routes.py
backend/src/modules/feedback/: repository.py  routes.py
backend/src/modules/files/: repository.py  routes.py
backend/src/modules/login_and_password/: repository.py
backend/src/modules/notifies/: repository.py  routes.py  scheams.py
backend/src/modules/notify/: repository.py  routes.py
backend/src/modules/participants/: repository.py  routes.py
backend/src/modules/results/: routes.py  (+1 more)
(+238 files in other folders)
