[tool.poetry]
name = "login-pass"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
authlib = "^1.3.2"
bcrypt = "^4.2.1"
colorlog = "^6.8.2"
cryptography = "^43.0.1"
fastapi = "^0.115.0"
fastapi-swagger = "^0.2.3"
gunicorn = "^23.0.0"
httpx = "^0.27.2"
icalendar = "^6.1.0"
itsdangerous = "^2.2.0"
passlib = "^1.7.4"
pre-commit = "^3.8.0"
pydantic = "^2.9.2"
ruff = "^0.6.7"
uvicorn = "^0.31.0"
pywebpush = "^2.0.3"

[tool.poetry.group.mongo.dependencies]
beanie = "^1.26.0"
motor = "^3.6.0"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
    "PLR"
]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
